k8s/overlays/nonprod/config-connector-resources.yaml
# Ingress for L7 HTTPS Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "webapp-dev-ip"
    networking.gke.io/managed-certificates: "webapp-cert"
    kubernetes.io/ingress.allow-http: "true"
    external-dns.alpha.kubernetes.io/hostname: "dev.webapp.u2i.dev"
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  defaultBackend:
    service:
      name: webapp-service
      port:
        number: 80
